# ansible-collection-gitcontrol

./: .ansible-lint  .gitignore  .yamllint  .zuul.yaml  README.md  bindep.txt  galaxy.yml  galaxy.yml.in  setup.cfg  test-requirements-2.9.txt  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: index.rst
playbooks/: manage.yaml  run.yaml
plugins/doc_fragments/: git.py  gitea.py  github.py
plugins/module_utils/: git.py  gitea.py  github.py
plugins/modules/: gitea_org_repository.py  github_org_members.py  github_org_repository.py  github_org_team.py  github_org_teams.py  members.py  repositories.py  scan_organizations.py  teams.py
roles/gitcontrol/: README.md
roles/gitcontrol/defaults/: main.yml
roles/gitcontrol/files/: github_api.py
roles/gitcontrol/tasks/: main.yaml  repo-present.yaml  teams-present.yaml
test_org/orgs/opentelekomcloud-gitcontrol-test/people/: dismissed_members.yml  members.yml
test_org/orgs/opentelekomcloud-gitcontrol-test/repositories/: test.yaml
test_org/orgs/opentelekomcloud-gitcontrol-test/teams/: dismissed_members.yml  members.yml
test_org/templates/: default.yml
tests/integration/: integration_config.yml.template
tests/integration/targets/gitea_org_repository/tasks/: main.yaml
tests/integration/targets/github_org_members/tasks/: main.yaml
tests/integration/targets/github_org_repository/defaults/: main.yaml
tests/integration/targets/github_org_repository/tasks/: main.yaml
tests/integration/targets/github_org_team/tasks/: main.yaml
tests/integration/targets/github_org_teams/tasks/: main.yaml
tests/integration/targets/members/tasks/: main.yaml
tests/integration/targets/repositories/tasks/: main.yaml
tests/integration/targets/teams/tasks/: main.yaml
tests/playbooks/: integration_config.yml.j2  pre.yaml
tests/sanity/: ignore.txt  requirements.txt
tools/: build.py
