[metadata]
name = ansible-collections-opentelekomcloud._CHANGEME_
summary = Ansible collections for _CHANGEME_
description-file =
    README.md

author = opentelekomcloud
home-page = https://open.telekom.cloud
classifier =
    License :: OSI Approved :: Apache License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGEME_/ = README.md
    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/roles/ = roles/*
    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/docs/ = docs/*
    share/ansible/collections/ansible_collections/opentelekomcloud/_CHANGME_/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
