[metadata]
name = ansible-collections-gitcontrol
summary = Ansible collections for managing GitHub organizations
description-file =
    README.md

author = opentelekomcloud
home-page = https://open.telekom.cloud
classifier =
    License :: OSI Approved :: Apache License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
